@@ -13,6 +13,9 @@
   disconnected.
 - mosquitto_new() will now generate a random client id if the id parameter is
   NULL.
+- The clean_session parameter has been moved from mosquitto_connect() to
+  mosquitto_new() because it is a client parameter rather than a connection
+  parameter.
 - Usernames were being lost when a non clean-session client reconnected,
   potentially causing problems with ACLs. This has been fixed.
 - Fix db_dump reading of retained messages.
